--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <div class="content">
         <div class="light">Reliable, efficient delivery</div>
         <div class="bold">Powered by Tecnology</div>
-        <div class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quos odio ipsa dolorem vel.</div>
+        <div class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ut voluptates sed repellendus, porro adipisci quo </div>
+
+        <div class="container">
+            <div class="card1">1</div>
+            <div class="card2">2</div>
+            <div class="card3">3</div>
+            <div class="card4">4</div>
+        </div>
     </div>
     
 </body>
