--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
         <div class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ut voluptates sed repellendus, porro adipisci quo </div>
 
         <div class="container">
-            <div class="card1">1</div>
+            <div class="card1">
+                <div class="line1"></div>
+                <div class="text">
+                    <div class="judul">Supervisor</div>
+                    <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
+                    <div class="icon"></div>
+                </div>
+            </div>
             <div class="card2">2</div>
             <div class="card3">3</div>
             <div class="card4">4</div>
