--- a/index.html
+++ b/index.html
@@ -25,9 +25,30 @@
                     <div class="icon"></div>
                 </div>
             </div>
-            <div class="card2">2</div>
-            <div class="card3">3</div>
-            <div class="card4">4</div>
+            <div class="card2">
+                <div class="line2"></div>
+                <div class="text">
+                    <div class="judul">Supervisor</div>
+                    <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
+                    <div class="icon"></div>
+                </div>
+            </div>
+            <div class="card3">
+                <div class="line3"></div>
+                <div class="text">
+                    <div class="judul">Supervisor</div>
+                    <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
+                    <div class="icon"></div>
+                </div>
+            </div>
+            <div class="card4">
+                <div class="line4"></div>
+                <div class="text">
+                    <div class="judul">Supervisor</div>
+                    <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
+                    <div class="icon"></div>
+                </div>
+            </div>
         </div>
     </div>
     
