menambahkan icon , dan membetulkan agar posisi menjadi tanda +

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 
         <div class="container">
             <div class="card1">
-                <div class="line1"></div>
-                <div class="text">
-                    <div class="judul">Supervisor</div>
-                    <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
-                    <div class="icon"></div>
+                <div class="isi">
+                    <div class="line1"></div>
+                    <div class="text">
+                        <div class="judul">Supervisor</div>
+                        <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
+                        <div class="icon">
+                            <img src="icon/responsive.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card2">
@@ -30,7 +34,9 @@
                 <div class="text">
                     <div class="judul">Supervisor</div>
                     <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
-                    <div class="icon"></div>
+                    <div class="icon">
+                        <img src="icon/customer-support.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="card3">
@@ -38,7 +44,9 @@
                 <div class="text">
                     <div class="judul">Supervisor</div>
                     <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
-                    <div class="icon"></div>
+                    <div class="icon">
+                        <img src="icon/mobile-app.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="card4">
