all done bro , cakep dah

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
                 </div>
             </div>
             <div class="card4">
-                <div class="line4"></div>
-                <div class="text">
-                    <div class="judul">Supervisor</div>
-                    <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
-                    <div class="icon"></div>
+                <div class="isi">
+                    <div class="line4"></div>
+                    <div class="text">
+                        <div class="judul">Supervisor</div>
+                        <div class="detail-card">Lorem ipsum dolor sit amet consectetur adipisicing elit..</div>
+                        <div class="icon">
+                            <img src="icon/user-interface.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
